--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,8 @@
 ChangeLog
 
+2.0.1.8
+	Fixed nullref when starting a crew collection mission
+
 2.0.1.7
 	Added new dependency, SpaceTuxLibrary
 	Replaced internal Log class with one from SpaceTuxLibrary
@@ -7,7 +10,6 @@ ChangeLog
 	Deleted old disabled code
 	Added KAC alarms for the missions
 	Changed min version to 1.10.1
-	New dependency, SpaceTuxLibrary
 
 2.0.1.6
 	Fixed issue with selection of a ship selecting the nth ship 
